[tool.poetry]
name = "codeclub"
version = "0.1.0"
description = ""
authors = ["Samu B <samubalogh@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
factory-boy = "^3.1.0"
Faker = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
